syntax = "proto3";

package stremio.core.types;

enum Status {
  STATUS_WATCHED = 0;
  STATUS_LIKED = 1;
  STATUS_LOVED = 2;
}

message RatingInfo {
  string meta_id = 1;
  optional Status status = 2;
} 